--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "main": "script.js",
   "scripts": {
+    "postinstall": "puppeteer browsers install chrome",
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node backend/server.js"
   },
